# zikoraai-eval-benchmarks

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVAL_CARD.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: answers.json  claims.csv  fairness.csv  prompts.csv
reports/: EXAMPLE_summary.md
scripts/: run_bench.py
tests/: conftest.py  test_accuracy.py  test_fairness.py  test_hallucination.py  test_latency.py  test_smoke.py
zikoraai_eval/: __init__.py  bench.py  metrics.py  models.py  paths.py
