[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "zikoraai-eval-benchmarks"
version = "0.1.0"
description = "Lightweight benchmark playbook for multi-agent AI evaluation"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["zikoraai_eval*"]
